fixup! refactor: decouple HTTP and WebSocket engines